<resources>
    <string name="app_name">App50001</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_delivery__home">Delivery_Home</string>
    <string name="logout_text">Logout</string>
    <string name="change_name_display">Change how your name is displayed</string>
    <string name="edit_name">Name:</string>
    <string name="delivery_id">Delivery ID:</string>
    <string name="company_name">Company Name:</string>
    <string name="save_setting_changes">Save all changes</string>

    <string name="delivery_navigation_history">History</string>
    <string name="delivery_navigation_home">Home</string>
    <string name="delivery_navigation_settings">Settings</string>
    <string name="pending_delivery">Pending Deliveries</string>
    <string name="delivery_history_title">Delivery History</string>


    <string name="user_navigation_history">History</string>
    <string name="user_navigation_home">Home</string>
    <string name="user_navigation_guests">Guests</string>
    <string name="user_navigation_settings">Settings</string>
    <string name="user_history_title">User Access History</string>
    <string name="retrieve_box_admin">You have access to the following boxes:</string>
    <string name="text_force_lock">Force Lock</string>
    <string name="text_temp_unlock">Temporary Unlock</string>
    <string name="user_guests_title">Guest Access Granted</string>
    <string name="user_add_new_guests">Add New Guests</string>
</resources>
