<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/delivery_settings">

    <TextView
        android:id="@+id/text_Delivery_Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/delivery_navigation_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_name_display_text"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/text_Delivery_Settings"
        android:text="@string/edit_name"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_logout"
        android:text="@string/logout_text"
        android:layout_alignRight="@+id/text_Delivery_Settings"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_edit_name"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:hint="@string/change_name_display"
        android:layout_below="@+id/settings_name_display_text"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_id_text"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/delivery_edit_name"
        android:text="@string/delivery_id"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_id_display"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/delivery_id_text"
        android:text="text"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_company_text"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/delivery_id_display"
        android:text="@string/company_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_company_display"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/delivery_company_text"
        android:text="text"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_settings"
        android:text="@string/save_setting_changes"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/delivery_company_display"
        />






</RelativeLayout>